next phase, classes are there, still need fine tuning

--- a/wilma-extras/circuit.breaker/src/main/resources/circuitBreakerStubConfigExample.json
+++ b/wilma-extras/circuit.breaker/src/main/resources/circuitBreakerStubConfigExample.json
@@ -1,7 +1,7 @@
 {
   "dialogs": [
     {
-      "name": "CircuitBreakerExampleConfiguration",
+      "name": "CircuitBreakerExampleConfiguration - 1",
       "usage": "always",
       "comment": "Circuit Breaker - experimental version of the Wilma Stub Configuration file in JSON format.",
       "conditions": [
@@ -11,22 +11,6 @@
             {
               "name": "identifier",
               "value": "CB_1"
-            },
-            {
-              "name": "path",
-              "value": "http://"
-            },
-            {
-              "name": "timeoutInSec",
-              "value": "15"
-            },
-            {
-              "name": "successCodes",
-              "value": "200, 201, 303"
-            },
-            {
-              "name": "maxErrorCount",
-              "value": "4"
             }
           ]
         }
@@ -35,7 +19,34 @@
         "code": 503,
         "delay": 0,
         "mimeType": "text/plain",
-        "template": "circuitBreakerTemplate",
+        "template": "circuitBreakerTemplate1",
+        "templateFormatters": [
+          {
+            "class": "com.epam.wilma.extras.circuitBreaker.ShortCircuitResponseGenerator"
+          }
+        ]
+      }
+    },
+    {
+      "name": "CircuitBreakerExampleConfiguration - 2",
+      "usage": "always",
+      "comment": "Circuit Breaker - experimental version of the Wilma Stub Configuration file in JSON format.",
+      "conditions": [
+        {
+          "class": "com.epam.wilma.extras.circuit.breaker.CircuitBreakerChecker",
+          "parameters": [
+            {
+              "name": "identifier",
+              "value": "CB_2"
+            }
+          ]
+        }
+      ],
+      "response": {
+        "code": 503,
+        "delay": 0,
+        "mimeType": "text/plain",
+        "template": "circuitBreakerTemplate2",
         "templateFormatters": [
           {
             "class": "com.epam.wilma.extras.circuitBreaker.ShortCircuitResponseGenerator"
@@ -46,15 +57,68 @@
   ],
   "templates": [
     {
-      "name": "circuitBreakerTemplate",
+      "name": "circuitBreakerTemplate1",
       "type": "text",
-      "resource": "Service has issues, and protected by Wilma-CircuitBreaker."
+      "resource": "Service has issues, and protected by Wilma-CircuitBreaker. Type: 1"
+    },
+    {
+      "name": "circuitBreakerTemplate2",
+      "type": "text",
+      "resource": "Service has issues, and protected by Wilma-CircuitBreaker.  Type: 2"
     }
   ],
   "interceptors": [
     {
-      "name": "Circuit Breaker Response Investigator",
-      "class": "com.epam.wilma.extras.circuitBreaker.CircuitBreakerInterceptor"
+      "name": "Circuit Breaker Response Investigator - CB_1",
+      "class": "com.epam.wilma.extras.circuitBreaker.CircuitBreakerInterceptor",
+      "parameters": [
+        {
+          "name": "identifier",
+          "value": "CB_1"
+        },
+        {
+          "name": "path",
+          "value": "http://v"
+        },
+        {
+          "name": "timeoutInSec",
+          "value": "15"
+        },
+        {
+          "name": "successCodes",
+          "value": "200, 201, 303"
+        },
+        {
+          "name": "maxErrorCount",
+          "value": "4"
+        }
+      ]
+    },
+    {
+      "name": "Circuit Breaker Response Investigator - CB_2",
+      "class": "com.epam.wilma.extras.circuitBreaker.CircuitBreakerInterceptor",
+      "parameters": [
+        {
+          "name": "identifier",
+          "value": "CB_2"
+        },
+        {
+          "name": "path",
+          "value": "http://127.0.0.1/testUrl"
+        },
+        {
+          "name": "timeoutInSec",
+          "value": "15"
+        },
+        {
+          "name": "successCodes",
+          "value": "200, 201, 303"
+        },
+        {
+          "name": "maxErrorCount",
+          "value": "4"
+        }
+      ]
     }
   ]
 }
