--- a/wilma-extras/reverse.proxy/gradle/wrapper/gradle-wrapper.properties
+++ b/wilma-extras/reverse.proxy/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Mar 09 21:51:26 CET 2016
+#Wed Nov 22 09:17:58 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.5-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.5-bin.zip
