initial approach to solve #94 - not yet working

--- a/wilma-application/modules/wilma-stub-configuration-support/build.gradle
+++ b/wilma-application/modules/wilma-stub-configuration-support/build.gradle
@@ -19,10 +19,12 @@ along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 
 description = 'Wilma Stub Configuration Support'
 dependencies {
-  compile project(':wilma-application:wilma-domain')
-  compile project(':wilma-application:wilma-stub-configuration-domain')
-  compile project(':wilma-application:wilma-common')
-  compile project(':wilma-application:wilma-browsermob-integration')
-  compile group: 'com.jayway.jsonpath', name: 'json-path', version:'0.9.1'
-  compile 'org.apache.commons:commons-lang3:3.3.2'
+    compile project(':wilma-application:wilma-domain')
+    compile project(':wilma-application:wilma-stub-configuration-domain')
+    compile project(':wilma-application:wilma-common')
+    compile project(':wilma-application:wilma-browsermob-integration')
+    compile 'org.json:json:20171018'
+    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
+    compile group: "com.github.everit-org.json-schema", name: "org.everit.json.schema", version: "1.6.1"
+    compile 'org.apache.commons:commons-lang3:3.3.2'
 }
