--- a/wilma-application/build.gradle
+++ b/wilma-application/build.gradle
@@ -100,6 +100,7 @@ subprojects {
 
     repositories {
         maven { url "https://repository.jboss.org/nexus/content/groups/public" }
+        maven { url 'https://jitpack.io' }
     }
     
     
