--- a/wilma-service-api/gradle.properties
+++ b/wilma-service-api/gradle.properties
@@ -1,7 +1,3 @@
 componentName=wilma-service-api
 buildNumber=DEV
-
-sonar_host_url=hosturl
-sonar_jdbc_username=userName
-sonar_jdbc_password=password
-sonar_jdbc_url=jdbcurl
+systemProp.sonar.host.url=http://localhost:9000
