--- a/wilma-message-search/build.gradle
+++ b/wilma-message-search/build.gradle
@@ -45,31 +45,7 @@ configurations {
 }
 
 dependencies {
-    jacoco 'org.jacoco:org.jacoco.ant:0.6.2.201302030002'
-}
-
-task jacocoReport(type: JacocoReport) {
-    dependsOn = subprojects.test
-    subprojects.each {
-        additionalSourceDirs = files(subprojects.sourceSets.main.allSource.srcDirs)
-        sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)
-        classDirectories = files(subprojects.sourceSets.main.output)
-        executionData = files(subprojects.jacocoTestReport.executionData)
-        reports {
-            html.enabled = true
-            xml.enabled = true
-            csv.enabled = false
-            html.destination "build/reports/jacoco"
-        }
-        onlyIf = {
-            true
-        }
-        doFirst {
-            executionData = files(executionData.findAll {
-                it.exists()
-            })
-        }
-    }
+    jacoco 'org.jacoco:org.jacoco.core:0.8.0'
 }
 
 task deleteRelease(type: Delete) {
