--- a/wilma-service-api/build.gradle
+++ b/wilma-service-api/build.gradle
@@ -1,5 +1,5 @@
 /*==========================================================================
-Copyright 2015 EPAM Systems
+Copyright since 2015, EPAM Systems
 
 This file is part of Wilma.
 
@@ -22,10 +22,22 @@ ext.componentDescription = "Wilma-Service-API"
 apply plugin: 'maven-publish'
 apply plugin: 'application'
 apply plugin: 'jacoco'
-apply plugin: "sonar-runner"
 apply from: '../common.gradle'
 
 mainClassName = 'com.epam.wilma.service.client.WilmaService'
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2"
+    }
+}
+
+apply plugin: "org.sonarqube"
 
 jar {
     manifest.attributes( 'provider': 'gradle')
@@ -54,31 +66,8 @@ configurations {
 }
 
 dependencies {
-    jacoco 'org.jacoco:org.jacoco.ant:0.6.2.201302030002'
+    jacoco 'org.jacoco:org.jacoco.core:0.8.0'
 }
-
-task jacocoReport(type: JacocoReport) {
-        dependsOn = tasks.withType(Test)
-        additionalSourceDirs = files(project.sourceSets.main.allSource.srcDirs)
-        sourceDirectories = files(project.sourceSets.main.allSource.srcDirs)
-        classDirectories = files(project.sourceSets.main.output)
-        executionData = files(project.jacocoTestReport.executionData)
-        reports {
-            html.enabled = true
-            xml.enabled = true
-            csv.enabled = false
-            html.destination "build/reports/jacoco"
-        }
-        onlyIf = {
-            true
-        }
-        doFirst {
-            executionData = files(executionData.findAll {
-                it.exists()
-            })
-        }
-}
-
 
 task copyJarToDistributions (type: Copy) {
     dependsOn(sourceZip)
@@ -109,16 +98,6 @@ uploadArchives {
         mavenDeployer {
             repository(url: "${myLocalRepository}")
         }
-    }
-}
-
-sonarRunner {
-    sonarProperties {
-        property "sonar.host.url", "${sonar_host_url}"
-        property "sonar.jdbc.url", "${sonar_jdbc_url}"
-        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
-        property "sonar.jdbc.username", "${sonar_jdbc_username}"
-        property "sonar.jdbc.password", "${sonar_jdbc_password}"
     }
 }
 
