upgrade gradle to 4.9 version

--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -64,9 +64,11 @@ task copyJarToDistributions (type: Copy) {
 	into("$buildDir/distributions")
 }
 
-task createPom << {
-    pom {
-    }.writeTo("$buildDir/distributions/$componentName-${version}.pom")
+task createPom {
+    doLast {
+        pom {
+        }.writeTo("$buildDir/distributions/$componentName-${version}.pom")
+    }
 }
 createPom.dependsOn(copyJarToDistributions)
 
