--- a/wilma-functionaltest/src/main/resources/wilma-test.properties
+++ b/wilma-functionaltest/src/main/resources/wilma-test.properties
@@ -5,6 +5,7 @@
 
 # the wilma proxy where the request should go through
 #wilma.host=localhost
+wilma.host=10.0.162.88
 wilma.port.external=9092
 wilma.port.internal=1234
 
