--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
     }
 }
 
-//apply plugin: "org.sonarqube"
+apply plugin: "org.sonarqube"
