Docker build files are upgraded to use latest (1.6) version

--- a/config/docker/Dockerfile-Wilma
+++ b/config/docker/Dockerfile-Wilma
@@ -10,13 +10,14 @@ RUN \
   apt-get install -y apt-utils && \
   apt-get install -y unzip && \
   apt-get install -y wget && \
-  apt-get install -y openjdk-7-jre && \
+  apt-get install -y procps && \
+  apt-get install -y openjdk-8-jre && \
   apt-get upgrade -y && \
   rm -rf /var/lib/apt/lists/* && \
-  wget https://github.com/epam/Wilma/releases/download/V1.5.195/wilma-application-1.5.195.zip && \
-  unzip wilma-application-1.5.195.zip && \
-  mv wilma-1.5.195.jar wilma.jar && \
-  rm -f wilma-application-1.5.195.zip
+  wget https://github.com/epam/Wilma/releases/download/V1.6.229/wilma-application-1.6.229.zip && \
+  unzip wilma-application-1.6.229.zip && \
+  mv wilma-1.6.229.jar wilma.jar && \
+  rm -f wilma-application-1.6.229.zip
 
 COPY start_wilma.sh /data/
 RUN \
@@ -33,7 +34,7 @@ ENV WILMA_CONFIGURATION wilma.conf.properties
 #ENV WILMA_JMX_PORT 9011 - note, if you use it, the port should be exposed too!
 
 # you may start wilma with default settings by /data/start_wilma.sh
-CMD ["./start_wilma.sh"]
+CMD ["bash","./start_wilma.sh"]
 
 # expose UI port and proxy port
 EXPOSE 1234 9092
