moving json based configuration stings to better place #94, #88

--- a/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
+++ b/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
@@ -1,6 +1,6 @@
 {
   "$schema": "http://json-schema.org/draft-06/schema#",
-  "description": "Representation of Wilma stub configuration possibilities",
+  "description": "Representation of Wilma stub configuration possibilities - DRAFT",
   "type": "object",
   "properties": {
     "interceptors": {
