--- a/wilma-service-api/build.gradle
+++ b/wilma-service-api/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile group: 'commons-httpclient', name: 'commons-httpclient', version:'3.1'
     compile group: 'commons-io', name: 'commons-io', version:'2.4'
     compile group: 'commons-validator', name: 'commons-validator', version:'1.4.1'
-    compile group: 'org.json', name: 'json', version:'20141113'
+    compile 'org.json:json:20180813'
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
     testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
     testCompile group: 'org.testng', name: 'testng', version:'6.8.5'
